// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnalyticalTrainingLoadRepository > caps per-channel activity ID evidence while retaining the total count 1`] = `
{
  "definitions": {
    "climbing_attempts": "Recorded attempt counts. Entries with unknown attempts are reported as missing, not failed or zero.",
    "cycling_power_tss": "Elapsed hours × (normalized power ÷ effective FTP)² × 100. Missing FTP or normalized power is not zero.",
    "finger_load": "Effective-load kg-seconds require repetitions per set and remain unavailable while the canonical source schema does not record repetitions.",
    "heart_rate_zone_load": "Sum of covered minutes in each configured threshold-HR zone multiplied by its one-based zone number.",
    "monotony_strain": "Monotony is seven-day mean ÷ population standard deviation; strain is seven-day sum × monotony. Zero variance is unavailable.",
    "rolling": "Acute is a 7-day sum; chronic is the 28-day sum divided by four; ratio is acute ÷ chronic only with complete windows. These descriptive values do not diagnose injury risk.",
    "session_rpe": "Recorded session RPE multiplied by activity duration in minutes.",
    "strength_volume": "Sum of weight × reps for non-warmup load-bearing sets with 1–100 reps and 0–500 kg.",
  },
  "range": {
    "date_policy": "source_context",
    "end_date": "2026-06-01",
    "start_date": "2026-06-01",
    "timezone": "UTC",
  },
  "rows": [
    {
      "channels": {
        "climbing_attempts": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "attempts",
          "value_kind": "calculated",
        },
        "cycling_power_tss": {
          "context": {
            "activities": 105,
          },
          "coverage": {
            "contributing_records": 105,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 105,
            "source_activity_ids_truncated": true,
            "supported_records": 105,
          },
          "daily_value": 10500,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 105,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 1,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 1,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [
            "00000000-0000-4000-9000-000000000001",
            "00000000-0000-4000-9000-000000000002",
            "00000000-0000-4000-9000-000000000003",
            "00000000-0000-4000-9000-000000000004",
            "00000000-0000-4000-9000-000000000005",
            "00000000-0000-4000-9000-000000000006",
            "00000000-0000-4000-9000-000000000007",
            "00000000-0000-4000-9000-000000000008",
            "00000000-0000-4000-9000-000000000009",
            "00000000-0000-4000-9000-000000000010",
            "00000000-0000-4000-9000-000000000011",
            "00000000-0000-4000-9000-000000000012",
            "00000000-0000-4000-9000-000000000013",
            "00000000-0000-4000-9000-000000000014",
            "00000000-0000-4000-9000-000000000015",
            "00000000-0000-4000-9000-000000000016",
            "00000000-0000-4000-9000-000000000017",
            "00000000-0000-4000-9000-000000000018",
            "00000000-0000-4000-9000-000000000019",
            "00000000-0000-4000-9000-000000000020",
            "00000000-0000-4000-9000-000000000021",
            "00000000-0000-4000-9000-000000000022",
            "00000000-0000-4000-9000-000000000023",
            "00000000-0000-4000-9000-000000000024",
            "00000000-0000-4000-9000-000000000025",
            "00000000-0000-4000-9000-000000000026",
            "00000000-0000-4000-9000-000000000027",
            "00000000-0000-4000-9000-000000000028",
            "00000000-0000-4000-9000-000000000029",
            "00000000-0000-4000-9000-000000000030",
            "00000000-0000-4000-9000-000000000031",
            "00000000-0000-4000-9000-000000000032",
            "00000000-0000-4000-9000-000000000033",
            "00000000-0000-4000-9000-000000000034",
            "00000000-0000-4000-9000-000000000035",
            "00000000-0000-4000-9000-000000000036",
            "00000000-0000-4000-9000-000000000037",
            "00000000-0000-4000-9000-000000000038",
            "00000000-0000-4000-9000-000000000039",
            "00000000-0000-4000-9000-000000000040",
            "00000000-0000-4000-9000-000000000041",
            "00000000-0000-4000-9000-000000000042",
            "00000000-0000-4000-9000-000000000043",
            "00000000-0000-4000-9000-000000000044",
            "00000000-0000-4000-9000-000000000045",
            "00000000-0000-4000-9000-000000000046",
            "00000000-0000-4000-9000-000000000047",
            "00000000-0000-4000-9000-000000000048",
            "00000000-0000-4000-9000-000000000049",
            "00000000-0000-4000-9000-000000000050",
            "00000000-0000-4000-9000-000000000051",
            "00000000-0000-4000-9000-000000000052",
            "00000000-0000-4000-9000-000000000053",
            "00000000-0000-4000-9000-000000000054",
            "00000000-0000-4000-9000-000000000055",
            "00000000-0000-4000-9000-000000000056",
            "00000000-0000-4000-9000-000000000057",
            "00000000-0000-4000-9000-000000000058",
            "00000000-0000-4000-9000-000000000059",
            "00000000-0000-4000-9000-000000000060",
            "00000000-0000-4000-9000-000000000061",
            "00000000-0000-4000-9000-000000000062",
            "00000000-0000-4000-9000-000000000063",
            "00000000-0000-4000-9000-000000000064",
            "00000000-0000-4000-9000-000000000065",
            "00000000-0000-4000-9000-000000000066",
            "00000000-0000-4000-9000-000000000067",
            "00000000-0000-4000-9000-000000000068",
            "00000000-0000-4000-9000-000000000069",
            "00000000-0000-4000-9000-000000000070",
            "00000000-0000-4000-9000-000000000071",
            "00000000-0000-4000-9000-000000000072",
            "00000000-0000-4000-9000-000000000073",
            "00000000-0000-4000-9000-000000000074",
            "00000000-0000-4000-9000-000000000075",
            "00000000-0000-4000-9000-000000000076",
            "00000000-0000-4000-9000-000000000077",
            "00000000-0000-4000-9000-000000000078",
            "00000000-0000-4000-9000-000000000079",
            "00000000-0000-4000-9000-000000000080",
            "00000000-0000-4000-9000-000000000081",
            "00000000-0000-4000-9000-000000000082",
            "00000000-0000-4000-9000-000000000083",
            "00000000-0000-4000-9000-000000000084",
            "00000000-0000-4000-9000-000000000085",
            "00000000-0000-4000-9000-000000000086",
            "00000000-0000-4000-9000-000000000087",
            "00000000-0000-4000-9000-000000000088",
            "00000000-0000-4000-9000-000000000089",
            "00000000-0000-4000-9000-000000000090",
            "00000000-0000-4000-9000-000000000091",
            "00000000-0000-4000-9000-000000000092",
            "00000000-0000-4000-9000-000000000093",
            "00000000-0000-4000-9000-000000000094",
            "00000000-0000-4000-9000-000000000095",
            "00000000-0000-4000-9000-000000000096",
            "00000000-0000-4000-9000-000000000097",
            "00000000-0000-4000-9000-000000000098",
            "00000000-0000-4000-9000-000000000099",
            "00000000-0000-4000-9000-000000000100",
          ],
          "source_providers": [
            "wahoo",
          ],
          "status": "available",
          "unit": "TSS points",
          "value_kind": "calculated",
        },
        "finger_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "kg-seconds",
          "value_kind": "calculated",
        },
        "heart_rate_zone_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "weighted zone-minutes",
          "value_kind": "calculated",
        },
        "session_rpe": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "RPE-minutes",
          "value_kind": "calculated",
        },
        "strength_volume": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "kg-reps",
          "value_kind": "calculated",
        },
      },
      "date": "2026-06-01",
    },
  ],
  "total_daily_load": {
    "reason": "Modality-specific loads use different units and are not treated as biologically interchangeable.",
    "value": null,
  },
}
`;

exports[`AnalyticalTrainingLoadRepository > does not turn unsupported activity load into zero 1`] = `
{
  "definitions": {
    "climbing_attempts": "Recorded attempt counts. Entries with unknown attempts are reported as missing, not failed or zero.",
    "cycling_power_tss": "Elapsed hours × (normalized power ÷ effective FTP)² × 100. Missing FTP or normalized power is not zero.",
    "finger_load": "Effective-load kg-seconds require repetitions per set and remain unavailable while the canonical source schema does not record repetitions.",
    "heart_rate_zone_load": "Sum of covered minutes in each configured threshold-HR zone multiplied by its one-based zone number.",
    "monotony_strain": "Monotony is seven-day mean ÷ population standard deviation; strain is seven-day sum × monotony. Zero variance is unavailable.",
    "rolling": "Acute is a 7-day sum; chronic is the 28-day sum divided by four; ratio is acute ÷ chronic only with complete windows. These descriptive values do not diagnose injury risk.",
    "session_rpe": "Recorded session RPE multiplied by activity duration in minutes.",
    "strength_volume": "Sum of weight × reps for non-warmup load-bearing sets with 1–100 reps and 0–500 kg.",
  },
  "range": {
    "date_policy": "analysis_timezone",
    "end_date": "2026-06-15",
    "start_date": "2026-06-14",
    "timezone": "UTC",
  },
  "rows": [
    {
      "channels": {
        "climbing_attempts": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "attempts",
          "value_kind": "calculated",
        },
        "cycling_power_tss": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "TSS points",
          "value_kind": "calculated",
        },
        "finger_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "kg-seconds",
          "value_kind": "calculated",
        },
        "heart_rate_zone_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "weighted zone-minutes",
          "value_kind": "calculated",
        },
        "session_rpe": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "RPE-minutes",
          "value_kind": "calculated",
        },
        "strength_volume": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "kg-reps",
          "value_kind": "calculated",
        },
      },
      "date": "2026-06-14",
    },
    {
      "channels": {
        "climbing_attempts": {
          "context": {
            "entries": 2,
            "entries_with_attempt_data": 0,
            "session_minutes": 60,
          },
          "coverage": {
            "contributing_records": 2,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Attempt information is missing for all 2 climbing entries.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8001-000000000001",
          ],
          "source_providers": [
            "manual",
          ],
          "status": "unavailable",
          "unit": "attempts",
          "value_kind": "calculated",
        },
        "cycling_power_tss": {
          "context": {
            "activities": 1,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 1,
            "authoritative_activities": 0,
          },
          "reason": "No valid FTP was effective for 1 cycling activity.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [
            "00000000-0000-4000-9000-000000000001",
          ],
          "source_providers": [
            "peloton",
          ],
          "status": "unavailable",
          "unit": "TSS points",
          "value_kind": "calculated",
        },
        "finger_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "kg-seconds",
          "value_kind": "calculated",
        },
        "heart_rate_zone_load": {
          "context": {},
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Source coverage had not begun by this date.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "weighted zone-minutes",
          "value_kind": "calculated",
        },
        "session_rpe": {
          "context": {
            "activities": 0,
          },
          "coverage": {
            "contributing_records": 0,
            "first_observed_date": null,
            "source_activity_count": 0,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "No activity has both duration and recorded session RPE.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [],
          "source_providers": [],
          "status": "unavailable",
          "unit": "RPE-minutes",
          "value_kind": "calculated",
        },
        "strength_volume": {
          "context": {
            "suspicious_sets_excluded": 1,
            "working_sets": 0,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-15",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "All 1 strength sets were excluded by validation rules.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8003-000000000001",
          ],
          "source_providers": [
            "manual",
          ],
          "status": "unavailable",
          "unit": "kg-reps",
          "value_kind": "calculated",
        },
      },
      "date": "2026-06-15",
    },
  ],
  "total_daily_load": {
    "reason": "Modality-specific loads use different units and are not treated as biologically interchangeable.",
    "value": null,
  },
}
`;

exports[`AnalyticalTrainingLoadRepository > returns a complete date spine with independent load channels and rolling definitions 1`] = `
{
  "definitions": {
    "climbing_attempts": "Recorded attempt counts. Entries with unknown attempts are reported as missing, not failed or zero.",
    "cycling_power_tss": "Elapsed hours × (normalized power ÷ effective FTP)² × 100. Missing FTP or normalized power is not zero.",
    "finger_load": "Effective-load kg-seconds require repetitions per set and remain unavailable while the canonical source schema does not record repetitions.",
    "heart_rate_zone_load": "Sum of covered minutes in each configured threshold-HR zone multiplied by its one-based zone number.",
    "monotony_strain": "Monotony is seven-day mean ÷ population standard deviation; strain is seven-day sum × monotony. Zero variance is unavailable.",
    "rolling": "Acute is a 7-day sum; chronic is the 28-day sum divided by four; ratio is acute ÷ chronic only with complete windows. These descriptive values do not diagnose injury risk.",
    "session_rpe": "Recorded session RPE multiplied by activity duration in minutes.",
    "strength_volume": "Sum of weight × reps for non-warmup load-bearing sets with 1–100 reps and 0–500 kg.",
  },
  "range": {
    "date_policy": "analysis_timezone",
    "end_date": "2026-06-28",
    "start_date": "2026-06-28",
    "timezone": "America/Los_Angeles",
  },
  "rows": [
    {
      "channels": {
        "climbing_attempts": {
          "context": {
            "entries": 4,
            "entries_with_attempt_data": 4,
            "session_minutes": 90,
          },
          "coverage": {
            "contributing_records": 4,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 4,
          },
          "daily_value": 10,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": 70,
            "acute_coverage_days": 7,
            "chronic_28d_weekly_equivalent": 70,
            "chronic_coverage_days": 28,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Monotony and strain are unavailable because the seven-day load variance is zero.",
            ],
            "workload_ratio": 1,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8001-000000000028",
          ],
          "source_providers": [
            "kaya",
          ],
          "status": "available",
          "unit": "attempts",
          "value_kind": "calculated",
        },
        "cycling_power_tss": {
          "context": {
            "activities": 1,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 1,
          },
          "daily_value": 100,
          "date_attribution": {
            "analysis_timezone_activities": 1,
            "authoritative_activities": 0,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": 700,
            "acute_coverage_days": 7,
            "chronic_28d_weekly_equivalent": 700,
            "chronic_coverage_days": 28,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Monotony and strain are unavailable because the seven-day load variance is zero.",
            ],
            "workload_ratio": 1,
          },
          "source_activity_ids": [
            "00000000-0000-4000-9000-000000000028",
          ],
          "source_providers": [
            "wahoo",
          ],
          "status": "available",
          "unit": "TSS points",
          "value_kind": "calculated",
        },
        "finger_load": {
          "context": {
            "entries": 1,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 0,
          },
          "daily_value": null,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": "Exact finger-load volume requires repetitions per set, which the canonical source schema does not record.",
          "rolling": {
            "acute_7d_sum": null,
            "acute_coverage_days": 0,
            "chronic_28d_weekly_equivalent": null,
            "chronic_coverage_days": 0,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Seven complete daily values are required for acute load.",
              "Twenty-eight complete daily values are required for chronic load.",
            ],
            "workload_ratio": null,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8002-000000000028",
          ],
          "source_providers": [
            "manual",
          ],
          "status": "unavailable",
          "unit": "kg-seconds",
          "value_kind": "calculated",
        },
        "heart_rate_zone_load": {
          "context": {
            "covered_seconds": 3600,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 1,
          },
          "daily_value": 120,
          "date_attribution": {
            "analysis_timezone_activities": undefined,
            "authoritative_activities": undefined,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": 840,
            "acute_coverage_days": 7,
            "chronic_28d_weekly_equivalent": 840,
            "chronic_coverage_days": 28,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Monotony and strain are unavailable because the seven-day load variance is zero.",
            ],
            "workload_ratio": 1,
          },
          "source_activity_ids": [
            "00000000-0000-4000-9001-000000000028",
          ],
          "source_providers": [
            "wahoo",
          ],
          "status": "available",
          "unit": "weighted zone-minutes",
          "value_kind": "calculated",
        },
        "session_rpe": {
          "context": {
            "activities": 1,
            "activities_with_rpe": 1,
          },
          "coverage": {
            "contributing_records": 1,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 1,
          },
          "daily_value": 300,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": 2100,
            "acute_coverage_days": 7,
            "chronic_28d_weekly_equivalent": 2100,
            "chronic_coverage_days": 28,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Monotony and strain are unavailable because the seven-day load variance is zero.",
            ],
            "workload_ratio": 1,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8000-000000000028",
          ],
          "source_providers": [
            "manual",
          ],
          "status": "available",
          "unit": "RPE-minutes",
          "value_kind": "calculated",
        },
        "strength_volume": {
          "context": {
            "suspicious_sets_excluded": 0,
            "working_sets": 4,
          },
          "coverage": {
            "contributing_records": 4,
            "first_observed_date": "2026-06-01",
            "source_activity_count": 1,
            "source_activity_ids_truncated": false,
            "supported_records": 4,
          },
          "daily_value": 500,
          "date_attribution": {
            "analysis_timezone_activities": 0,
            "authoritative_activities": 0,
          },
          "reason": null,
          "rolling": {
            "acute_7d_sum": 3500,
            "acute_coverage_days": 7,
            "chronic_28d_weekly_equivalent": 3500,
            "chronic_coverage_days": 28,
            "monotony_7d": null,
            "strain_7d": null,
            "unavailable_reasons": [
              "Monotony and strain are unavailable because the seven-day load variance is zero.",
            ],
            "workload_ratio": 1,
          },
          "source_activity_ids": [
            "00000000-0000-4000-8003-000000000028",
          ],
          "source_providers": [
            "manual",
          ],
          "status": "available",
          "unit": "kg-reps",
          "value_kind": "calculated",
        },
      },
      "date": "2026-06-28",
    },
  ],
  "total_daily_load": {
    "reason": "Modality-specific loads use different units and are not treated as biologically interchangeable.",
    "value": null,
  },
}
`;
